# S2-OOP-issues-mv

./: .gitignore  CMakeLists.txt  README.md
data/: issues.txt  issues.txt.old  users.txt
src/: main.cpp
src/domain/: Issue.cpp  Issue.h  User.cpp  User.h
src/repository/: IssueRepository.cpp  IssueRepository.h
src/ui/: IssuesModel.cpp  IssuesModel.h  UserWindow.cpp  UserWindow.h
